[tool.poetry]
name = "iam"
version = "0.7.4"
description = "Python package for interacting with pg-iam"
authors = [
    "Leon du Toit <l.c.d.toit@usit.uio.no>",
    "Milen Kouylekov <milen.kouylekov@usit.uio.no>",
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = ">=1.4.22,<2"
psycopg2 = "^2.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
debugpy = "^1.6.3"
debugpy-run = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
